[package]
name = "setup_fs"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
doc-comment = "0.3.3"

[dev-dependencies]
tempfile = "3.1.0"
version-sync = "0.9.4"
